--- a/crash-the-mole/src/App.css
+++ b/crash-the-mole/src/App.css
@@ -117,3 +117,27 @@
   margin-top: 10px;
   transition: background-color 0.3s;
 }
+
+.endButton {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #e20909;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s;
+}
+
+.resetButton {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #042453;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s;
+}
